[metadata]
name = roz_scripts
version = 0.0.1
author = Sam Wilkinson
author_email = s.a.j.wilkinson@bham.ac.uk
description = Scripts used in the CLIMB-TRE ingest
long_description = file: README.md
license_files =  LICENSE
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    setuptools>=42
    pytest
    boto3

[options.entry_points]
console_scripts = 
    mscape_ingest = roz_scripts.mscape.mscape_ingest_validation:main