[metadata]
name = roz_scripts
version = 1.8.0
author = Sam Wilkinson
author_email = s.a.j.wilkinson@bham.ac.uk
description = Scripts used in the CLIMB-TRE ingest
long_description = file: README.md
long_description_content_type = text/markdown
license_files =  LICENSE
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.12
install_requires =
    setuptools>=42
    pytest
    boto3==1.35.95
    climb-onyx-client
    varys-client
    regex
    kubernetes


[options.entry_points]
console_scripts = 
    mscape_ingest = roz_scripts.mscape.mscape_ingest_validation:main
    chimera_runner = roz_scripts.mscape.chimera_runner:main
    pathsafe_ingest = roz_scripts.pathsafe.pathsafe_validation:main
    s3_matcher = roz_scripts.general.s3_matcher:main
    general_ingest = roz_scripts.general.ingest:main
    s3_controller = roz_scripts.general.s3_controller:main
    s3_notifications = roz_scripts.general.s3_notifications:main
    s3_onyx_updates = roz_scripts.general.s3_onyx_updates:main
    pathsafe_updates = roz_scripts.pathsafe.pathsafe_updates:main
    public_db_controller = roz_scripts.utils.public_db_controller:main